# Ejercicio-4

Ejercicio #4/: enunciado.md  pyproject.toml
Ejercicio #4/Paquete geometria/: __init__.py  geom2d.py
Ejercicio #4/Paquete geometria/Tests/: Test_distance.py
