[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Paquete geometria"
version = "0.0.1"
requires-python = ">=3.10"
readme = "enunciado.md"
authors = [
	{name = 'Reyni Calderon', email = 'reynimac@ucm.es'},
]


dependencies = [ "typing >= 3.4", "pytest >= 7.2.1"]

[tool.setuptools.packages.find]
exclude = ["tests*"]